--- a/Whitesquare/css/style.css
+++ b/Whitesquare/css/style.css
@@ -1,4 +1,5 @@
 body{
+    min-width:960px;
     background-image: url(../images/bg3.png);
     color: #8f8f8f; /*цвет текста*/
     font: 12px Tahoma, sans-serif; /*размер шрифта 12пх, шрифт тахома, семейство шрифтов сан-сериф*/
@@ -98,7 +99,7 @@ aside {
     float: left;
     width: 250px;
 }
-section {
+aside + section {
     margin-left: 280px;
     padding-bottom: 50px;
 }
@@ -126,3 +127,284 @@ section {
     color: #8f8f8f;
 }
 /*ЛЕВОЕ МЕНЮ КОНЕЦ*/
+aside h2 {
+    height: 38px;
+    background-color: #29c5e6;
+    color: #ffffff;
+    font-family: Oswald;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 40px;
+    text-transform: uppercase;
+    letter-spacing: 0.56px;
+    padding-left:10px;
+}
+aside p {
+    background: #f3f3f3;
+    border: 1px solid #e7e7e7;
+    padding: 10px;
+    margin: 0;
+}
+section blockquote {
+    background-color: #29c5e6;
+    width: 100%;
+    margin: 0px;
+}
+section blockquote p {
+    font: 14px 'Oswald', sans-serif;
+    color: #ffffff;
+    font-size: 33px;
+    text-transform: uppercase;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 34px;
+    padding-left:22px;
+    padding-right:27px;
+    padding-top:19px;
+    margin-bottom: 17px;
+}
+section blockquote cite {
+    display: block;
+    text-align: right;
+    color: #1d8ea6;
+    font: 14px 'Oswald', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 34px;
+    padding-bottom: 14px;
+    padding-right: 36px;
+}
+figure {
+    display: inline-block;
+    margin: 0;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+}
+
+figure img {
+    display: block;
+    border: 1px solid #fff;
+    outline: 1px solid #c9c9c9;
+}
+
+figure figcaption {
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 5px;
+}
+
+figure figcaption span {
+    display: block;
+    font-size: 14px;
+    color: #29c5e6;
+}
+section > figure + figure {
+    margin-left: 28px;
+}
+section h2 {
+    background-color: #29c5e6;
+    color: #ffffff;
+    font: 30px 'Oswald', sans-serif;
+    font-weight: 300;
+    line-height: 40px;
+    text-transform: uppercase;
+    letter-spacing: 1.2px;
+    margin: 30px 0 0 0;
+    padding: 0 10px;
+}
+figure figcaption {
+    font-size: 16px;
+    font-weight: 300;
+    margin-top: 5px;
+}
+
+figure div {
+    font-size: 14px;
+    color: #29c5e6;
+}
+
+.team-row figure {
+    margin-top: 20px;
+}
+
+.team-row figure + figure {
+    margin-left: 43px;
+}
+footer {
+    background: #7e7e7e;
+    color: #dbdbdb;
+    font-size: 11px;
+}
+
+#footer {
+    max-width: 960px;
+    margin: auto;
+    padding: 10px 10px;
+    height: 90px;
+}
+footer p{
+    margin: 5px 0;
+}
+#twitter {
+    float: left;
+    width: 300px;
+}
+footer h3 {
+    color: #ffffff;
+    font: 14px 'Oswald', sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.56px;
+    border-bottom: 1px solid #919191;
+    margin: 0 0 10px 0;
+}
+#twitter a{
+    font-family: Tahoma;
+    color: #b4aeae;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 14px;
+    text-decoration: underline;
+}
+#twitter p{
+    padding-right: 15px;
+    margin-top: 7px;
+}
+#sitemap {
+    width: 150px;
+    float: left;
+    margin-left: 20px;
+    padding-right: 15px;
+}
+#sitemap div {
+    display: inline-block;
+}
+footer a {
+    color: #dbdbdb;
+    font-family: Tahoma;
+    font-size: 12px;
+}
+#sitemap div + div {
+    margin-left: 40px;
+}
+#sitemap a {
+    display: block;
+    text-decoration: none;
+    font-size: 12px;
+    margin-bottom: 5px;
+}
+
+#sitemap a:hover {
+    text-decoration: underline;
+}
+#social {
+    float: left;
+    margin-left: 20px;
+    width: 130px;
+}
+
+.social-icon {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.social-icon-small  {
+    width: 16px;
+    height: 16px;
+    display: inline-block;
+    margin: 5px 6px 0 0;
+}
+
+.twitter {
+    background: url(../images/twitter.png) no-repeat;
+}
+.facebook {
+    background: url(../images/facebook.png) no-repeat;
+}
+.google-plus {
+    background: url(../images/google.png) no-repeat;
+}
+.vimeo {
+    background: url(../images/vimeo.png) no-repeat;
+}
+.youtube{
+    background: url(../images/youtube.png) no-repeat;
+}
+.flickr{
+    background: url(../images/flickr.png) no-repeat;
+}
+.instagram{
+    background: url(../images/instagram.png) no-repeat;
+}
+.rss{
+    background: url(../images/rss.png) no-repeat;
+}
+#footer-logo {
+    float: right;
+    margin-top: 20px;
+    font-size: 10px;
+    text-align: right;
+}
+/*Главная страница*/
+.slider__body{
+    min-height: 280px;
+    background-color: #dcdcdc;
+}
+.slider__title{
+    padding-left:40px;
+    padding-top:40px;
+    text-transform: uppercase;
+    color: #5a5a5a;
+    font-size: 42px;
+    font-weight: 300;
+    line-height: 37.45px;
+    font-family: 'Oswald', sans-serif;
+}
+.slider__text{
+    padding-left:40px;
+    margin-top:6px;
+    color: #acacac;
+    font-family: 'Oswald', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 16px;
+}
+.slider__nav{
+    padding-top: 17px;
+    padding-bottom: 18px;
+    background-color: #f3f3f3;
+    border-bottom: 1px solid #e7e7e7;
+}
+.slider__nav p {
+    padding:12px;
+    display: inline;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-family: 'Oswald', sans-serif;
+}
+.slider__nav__num{
+    width:24px;
+    height:24px;
+    background-color: #8f8f8f;
+    color: #ffffff;
+    padding:5px 10px;
+    font-size: 16px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    line-height: 16px;
+    margin-right:12px;
+}
+.slider__nav__actvive span{
+    font-weight: 300;
+    background-color: #29c5e6;
+}
+.slider__nav__actvive {
+    color: #29c5e6;
+}
+
+
+
+
+
