--- a/Whitesquare/css/style.css
+++ b/Whitesquare/css/style.css
@@ -448,7 +448,7 @@ footer a {
 }
 .miniTitle span{
     padding-left: 5px;
-    background-image: url(../images/bg7.jpg);
+    background-image: url(../images/bg.png);
     padding-right: 8px;
 }
 .miniTitle__line{
