--- a/Whitesquare/css/style.css
+++ b/Whitesquare/css/style.css
@@ -199,7 +199,7 @@ figure figcaption span {
     font-size: 14px;
     color: #29c5e6;
 }
-section > figure + figure {
+figure + figure {
     margin-left: 28px;
 }
 section h2 {
@@ -551,4 +551,22 @@ p.ourteam__announce{
 }
 .ourclients__images{
     margin:20px;
+}
+section p{
+    color: #8f8f8f;
+    font-family: Tahoma;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    text-align: justify;
+}
+.projects figcaption{
+    text-align:center;
+    color: #8f8f8f;
+    font-family: Oswald;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 40px;
+    text-transform: uppercase;
+    margin-top: -4px;
 }
